	  a much better API for new scripts.
	* Yahoo color support (Tim Ringenbach (marv_sf))
	* Yahoo and MSN get info support (Nathan Poznick)
	* Fixed Jabber registrations.
	* Fixed a problem where pouncing two users with the same name
	  appeared in the same conversation window, and other related
	  problems. (Robot101)
	* Corrected problems with proxy preferences.
	* Catalan translation updated (Robert Millan)
	* Chinese (Simplified) translation updated (Funda Wang)
	* Chinese (Traditional) translation updated (Ambrose C. Li)
	* Danish translation updated (Morten Brix Pedersen (mbrix))
	* Finish translation updated (Ambrose C. LI (acli))
	* German translation updated (Bjoern Voigt)
	* Portuguese (Brazilian) translation updated (Mauricio de Lemos
	  Rodrigues Collares Neto)
	* Norwegian translation updated (Petter Johan Olsen)
	* Romanian translation updated (Misu Moldovan (dumol))
	* Serbian translation updated (Danilo Segan)
	* Serbian Latin translation updated (Danilo Segan)
	* Swedish translation updated (Tore Lundqvist (luntor))

version 0.67 (08/14/2003):
	* Brought back the message notification plugin (Brian Tarricone)
	  You'll need to reconfigure your settings for this plugin
	* IRC protocol plugin rewritten (Ethan Blanton)
	* New IRC protocol icon (Nuno Donato)
	* Protocol and status icons now optionally appear on tabs.
	  (Etan Reisner)
	* Various dialog rewrites (Jabber vCard, Add Group, Alias Chat,
	  Rename Group, Privacy)
	* Shows "hiptop" icon for AIM buddies using hiptop
	  devices (Robey Pointer)
	* Privacy core/UI split.
	* Conversation placement by group now applies to chats in the buddy
	  list as well.
	* Events in a conversation (user logged in, logged out, window closed,
	  etc.) now grey the tab.
	* Various bug fixes (larne from irc, Tim Ringenbach, Bjoern 
	  Voigt, Paul A (darkrain))
	* British English "translation" updated (Sam Halliday)
	* Chinese (Simplified) translation updated (Funda Wang)